# evk

./: CMakeLists.txt  Templates.txt  compileShaders.sh
include/: Base.hpp  Base.hpp.old  CombinedImageSamplers.hpp  CombinedImageSamplersDescriptor.hpp  DescriptorBase.hpp  Devices.hpp  Header.hpp  Interface.hpp  Resources.hpp  SBO.hpp  SBODescriptor.hpp  ShaderProgram.hpp  Static.hpp  StaticTest.hpp  StorageImages.hpp  StorageImagesDescriptor.hpp  TextureImages.hpp  TextureImagesDescriptor.hpp  TextureSamplers.hpp  TextureSamplersDescriptor.hpp  UBO.hpp  UBODescriptor.hpp
include/Descriptors/: CombinedImageSamplers.hpp  DescriptorBase.hpp  SBO.hpp  StorageImages.hpp  TextureImages.hpp  TextureSamplers.hpp  UBO.hpp
src/: Base.cpp  Devices.cpp  Interface.cpp  RenderPipeline.cpp  RenderPipelineDescriptorSet.cpp  RenderPipelineDescriptorSet.cpp.old  RenderPipelineDescriptorSetDescriptor.cpp  Resources.cpp  StaticTest.cpp
test/: frag.frag  main.cpp  vert.vert
